--- a/app/assets/common.css
+++ b/app/assets/common.css
@@ -1,5 +1,4 @@
 html {
-  font-family: 'Hiragino Sans', sans-serif;
   font-size: 16px;
   word-spacing: 1px;
   -ms-text-size-adjust: 100%;
@@ -44,4 +43,8 @@ html {
 
 .text-center {
   text-align: center;
+}
+
+p {
+  margin: 16px 0;
 }
